--- a/templates/chatbot.html
+++ b/templates/chatbot.html
@@ -163,7 +163,7 @@
     
     <div class="chat-header">
         <h1>Chatbot</h1>
-        <p>DFA-NG</p>
+        <p>DFA표기문법을 사용하여 대화할 수 있습니다.</p>
     </div>
 
     <div class="action-info">
