메인화면 이모지 변경

--- a/templates/index.html
+++ b/templates/index.html
@@ -146,13 +146,13 @@
             </a>
             
             <a href="/avatar" class="card example-card">
-                <div class="example-icon">🧑‍🎨</div>
+                <div class="example-icon">👤</div>
                 <h3>아바타</h3>
                 <p>아바타 예시</p>
             </a>
             
             <a href="/robot" class="card example-card">
-                <div class="example-icon">🤖</div>
+                <div class="example-icon">💻</div>
                 <h3>로봇</h3>
                 <p>로봇 제어 예시</p>
             </a>
