기본 표기 말풍선 수정

--- a/templates/affinity.html
+++ b/templates/affinity.html
@@ -405,7 +405,7 @@
             <div class="message assistant">
                 <span class="message-label">AI</span>
                 <div class="message-content">
-                    안녕하세요! 저와 대화하면서 호감도를 올려보세요. 친절하게 대화하면 호감도가 올라가고, 그렇지 않으면 내려갈 수 있어요!
+                    안녕하세요! 재미있게 대화해 봅시다
                 </div>
             </div>
         </div>
