--- a/templates/avatar.html
+++ b/templates/avatar.html
@@ -359,7 +359,7 @@
             <div class="message assistant">
                 <span class="message-label">AI</span>
                 <div class="message-content">
-                    안녕하세요! 저와 대화하면 제 감정과 행동이 Live2D 아바타에 표현됩니다. 아바타를 클릭해보세요!
+                    저는 DFA표기문법을 사용하여 이바타에 반응을 나타낼 수 있습니다! 자유롭게 대화해 보세요
                 </div>
             </div>
         </div>
