--- a/templates/chatbot.html
+++ b/templates/chatbot.html
@@ -186,7 +186,7 @@
         <div class="message assistant">
             <span class="message-label">AI</span>
             <div class="message-content">
-                안녕하세요! 저는 DFA-Notation-Grammar를 사용하는 챗봇입니다. 자유롭게 대화를 시작해 보세요!
+                저는 DFA표기문법을 사용하여 대화할 수 있습니다! 재미있게 대화해 보세요
             </div>
         </div>
     </div>
