기본 표기 말풍선 수정 2

--- a/templates/affinity.html
+++ b/templates/affinity.html
@@ -405,7 +405,7 @@
             <div class="message assistant">
                 <span class="message-label">AI</span>
                 <div class="message-content">
-                    안녕하세요! 재미있게 대화해 봅시다
+                    안녕하세요! 재미있게 대화하고 싶어요
                 </div>
             </div>
         </div>
